--- a/src/assets/stylesheets/_variables.css
+++ b/src/assets/stylesheets/_variables.css
@@ -72,6 +72,7 @@
 
     --content-width: 1000px;
 
+    --height-header: 5.5rem;
     --height-bottom-line: 1rem;
 }
 
